# evm-heartbeat-overlay

./: .dockerignore  .gitignore  Dockerfile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
docs/plans/: 2026-07-09-evm-heartbeat-overlay.md
src/evm_overlay/: __init__.py  breathing.py  config.py  evm.py  evm_visualization.py  frame_processing.py  health.py  mqtt.py  overlay.py  pulse.py  roi.py  service.py  skin_detection.py  snapshot.py  stream_writer.py  ui.py
tests/: test_breathing.py  test_config.py  test_evm.py  test_evm_subtle.py  test_evm_visualization.py  test_frame_processing.py  test_health.py  test_mqtt.py  test_overlay.py  test_pulse.py  test_roi.py  test_service_roi.py  test_skin_detection.py  test_snapshot.py  test_stream_writer.py  test_ui.py
unraid/: evm-heartbeat-overlay.xml
