[project]
name = "evm-heartbeat-overlay"
version = "0.1.0"
description = "Eulerian/rPPG heartbeat extraction from Frigate/go2rtc camera streams with overlay restreaming."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "opencv-python-headless>=4.9",
  "PyYAML>=6.0",
  "paho-mqtt>=2.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
